Resolve additional sonar reports
Signed-off-by: Nathan Klick <nathan@swirldslabs.com>